# capture

./: .env.example  .gitignore  Improvements.md  README.md
.github/workflows/: ci.yml
apps/chrome-extension/: README.md  manifest.json  package.json
apps/chrome-extension/tests/: api.test.mjs  background.test.mjs  inline-capture.test.mjs  inline-permission.test.mjs  syntax.test.mjs
apps/macos/: README.md  project.yml
apps/macos/Recall.xcodeproj/: project.pbxproj
assets/brand/: README.md
contracts/: api.md  capture.schema.json  enriched_capture.schema.json
contracts/examples/: capture-ready-response.json  capture-request.json  embedding-input.txt  enrichment-output.json
docs/: architecture.md  backend-stress-report-2026-07-18.md  branch-layout.md  browser-inline-capture-development-record.md  browser-inline-capture-spec.md  decisions.md  demo-script.md  developer-a-backend-handoff.md  developer-b-checklist.md  product-plan.md  roadmap.md
docs/examples/: macos-layer3-placeholder.swift
scripts/: dev.sh
services/backend/: README.md  pyproject.toml
services/backend/app/: api_models.py  attachments.py  checklist.py  config.py  image_enrichment.py  limits.py  main.py  models.py  ocr.py  repository.py
services/backend/app/static/: checklist.html
services/backend/tests/: test_api.py  test_checklist.py  test_config.py  test_database.py  test_dev_script.py  test_health.py  test_image_captures.py  test_image_enrichment.py  test_ocr.py  test_packaging.py  test_repository.py  test_stress_backend.py
services/backend/tools/: stress_backend.py
(+33 files in other folders)
