[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "recall-backend"
version = "0.2.0"
description = "Local FastAPI backend for Recall"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<1.0",
  "pydantic-settings>=2.6,<3.0",
  "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx2>=2,<3",
  "pytest>=8,<10",
]

[tool.setuptools.package-data]
app = ["migrations/*.sql", "static/*.html"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
testpaths = ["tests"]
